add html/css materials

--- a/HTML-CSS/CV.html
+++ b/HTML-CSS/CV.html
@@ -19,6 +19,31 @@
     Sitting down in a chair
 </ul>
 
+<table border="1">
+    <tr>
+        <th> Technologies </th>
+        <td> Skill 1 </td>
+        <td> Skill 2 </td>
+        <td> Skill 3 </td>
+    </tr>
+    <tr>
+        <th> Soft Skills </th>
+        <td> Skill 4 </td>
+        <td> Skill 5 </td>
+        <td> Skill 6 </td>
+    </tr>
+</table>
+<h2> <i>Contacts</i></h2>
+<a href="https://vk.com/username" target="_blank"> Vkontakte </a>
+<br>
+<a href="https://facebook.com/username" target="_blank"> Facebook </a>
+
+<h2> <b> Write me a message </b> </h2>
+<form>
+    <input placeholder="Name" /> <br>
+    <input placeholder="Email" /> <br>
+    <input type="submit" name="Send"/>
+</form>
 
 </body>
 </html>
