--- a/HTML-CSS/Примеры.html
+++ b/HTML-CSS/Примеры.html
@@ -68,12 +68,29 @@
     <input type="radio" name="language" value="Более 3-х лет " /> 1-3 года
 </form>
 
-<h3>Как ваз зовут?</h3>
+<h3>Как вас зовут?</h3>
 <form method="POST" action="#">
 <input type="text" name="name" >
 <input type="submit" name="submit">
 </form>
 
+<form>
+    <label for="email">Your e-mail address: </label>
+    <input type="text" name="email" placeholder="email@example.com" autofocus/>
+    <br>
+    <label for="password">Your password: </label>
+    <input type="password" name="password" required />
+    <input type="submit" value="Submit" />
+</form>
+
+<h3>Форма для мобильного девайса:</h3>
+<div>
+    <input id="email" name="email" type="email" placeholder="example@example.com" />
+    <br />
+    <input id="url" name="url" type="url" placeholder="example.com" />
+    <br />
+    <input id="tel" name="tel" type="tel" placeholder="555.555.1211" />
+</div>
 
 </body>
 </html>
