add html/css materials

--- a/HTML-CSS/CV.html
+++ b/HTML-CSS/CV.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Resume</title>
+    <link rel="stylesheet" href="resume.css" >
 </head>
 <body>
-<h1> Igor Iakubovskii </h1>
+<h1>  Igor Iakubovskii </h1>
 <p> <strong> Python backend developer </strong> </p>
 <img src="https://cdn2.iconfinder.com/data/icons/avatars-99/62/avatar-370-456322-512.png" />
 <hr>
