refactor structure / add parsing files

--- a/HTML-CSS/Примеры.html
+++ b/HTML-CSS/Примеры.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Моя первая HTML страница</title>
 </head>
-<body>
+<hr>
 <p> Это первый параграф </p>
 <!--- Это наш первый комментарий -->
 <h1> Самый большой заголовок </h1>
@@ -29,10 +29,10 @@
 </ul>
 
 <p align="center"> Этот текст выровнен по центру </p>
-<hr width="50px" />
-<hr width="50%" />
+<hr align="right" width="1280px"/>
+<hr width="75%" />
 
-<table border="5">
+<table border="2">
    <tr>
       <td> Первый элемент</td>
       <td> Второй элемент </td>
@@ -90,6 +90,7 @@
     <input id="url" name="url" type="url" placeholder="example.com" />
     <br />
     <input id="tel" name="tel" type="tel" placeholder="555.555.1211" />
+    </br> <input type="submit" value="Submit" />
 </div>
 
 </body>
